upgraded token authorization to twin token system